--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "common-k",
+  "author": "Austin Wasson",
+  "version": "0.0.1",
   "module": "index.ts",
   "type": "module",
   "scripts": {
     "test": "vitest"
   },
   "devDependencies": {
+    "@types/react": "^18.2.45",
     "bun-types": "latest",
     "vitest": "^1.0.4"
   },
   "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.0.0"
   }
 }
